# labs-rss-json-sm

./: Cargo.toml  DEVELOPER.md  Makefile  README.md  SmartModule.toml
src/: lib.rs
test-data/: input.xml  output.json
